Main_tune for no Layer Hyperparameters Tuning

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -200,7 +200,9 @@
     "\n",
     "pipeline_list = []\n",
     "for f, l in product(filter_list, layer_list):\n",
-    "    pipeline_list.append(InputPipeline(transformer=f, layer_transformer=l))"
+    "    pipeline_list.append(InputPipeline(transformer=f, layer_transformer=l))\n",
+    "    \n",
+    "no_layer_pip = InputPipeline(transformer=[normalize], layer_transformer=None)"
    ]
   },
   {
@@ -233,7 +235,7 @@
     "    \"Negative Mining\": False, #tune.choice([True, False]),\n",
     "    \"Smooth Labeling\": False, #tune.choice([True, False]),\n",
     "\n",
-    "    \"Input Pipeline\": tune.grid_search(pipeline_list),\n",
+    "    \"Input Pipeline\": no_layer_pip, #tune.grid_search(pipeline_list),\n",
     "}"
    ]
   },
@@ -389,7 +391,7 @@
     "\n",
     "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
-    "    inpip = config[\"Input Pipeline\"]\n",
+    "    inpip = result.config[\"Input Pipeline\"]\n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        inpip = inpip.to(device)\n",
     "\n",
@@ -473,6 +475,7 @@
     "    num_samples=NUM_SAMPLES,\n",
     "#     scheduler=scheduler,\n",
     "#     search_alg=search_algo,\n",
+    "    max_concurrent_trials=2,\n",
     ")\n",
     "\n",
     "tuner = tune.Tuner(\n",
@@ -486,7 +489,8 @@
     "        checkpoint_config=CheckpointConfig(\n",
     "            num_to_keep=1,\n",
     "            checkpoint_score_attribute=\"CrackIoU\",\n",
-    "            checkpoint_score_order=\"max\")))"
+    "            checkpoint_score_order=\"max\",\n",
+    "            checkpoint_at_end=False)))"
    ]
   },
   {
@@ -502,7 +506,7 @@
    "execution_count": null,
    "id": "cdfb3720",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -622,7 +626,7 @@
    },
    "oldHeight": 122.844,
    "position": {
-    "height": "40px",
+    "height": "144.844px",
     "left": "1576px",
     "right": "20px",
     "top": "120px",
@@ -635,8 +639,8 @@
     "instance",
     "_Feature"
    ],
-   "varInspector_section_display": "none",
-   "window_display": true
+   "varInspector_section_display": "block",
+   "window_display": false
   }
  },
  "nbformat": 4,
