Saving main_tune for precise HP tuning

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -151,9 +151,7 @@
   {
    "cell_type": "markdown",
    "id": "5d931716",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Preload Losses Functions"
    ]
@@ -167,7 +165,11 @@
      "end_time": "2023-04-17T06:24:56.733872Z",
      "start_time": "2023-04-17T06:24:56.722857Z"
     },
-    "hidden": true
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
    },
    "outputs": [],
    "source": [
@@ -195,11 +197,9 @@
   {
    "cell_type": "markdown",
    "id": "9939e19b",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "##### Preload Filter"
+    "##### Preload Pipeline"
    ]
   },
   {
@@ -211,7 +211,11 @@
      "end_time": "2023-04-17T06:24:57.905012Z",
      "start_time": "2023-04-17T06:24:57.875365Z"
     },
-    "hidden": true
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
    },
    "outputs": [],
    "source": [
@@ -254,18 +258,27 @@
    "outputs": [],
    "source": [
     "search_space = {\n",
-    "    \"Network\": UNet, #tune.grid_search([UNet, DeepCrack, SubUNet]),\n",
+    "    \"Network\": SubUNet, #tune.grid_search([UNet, DeepCrack, SubUNet]),\n",
     "    \"Optimizer\": Adam,\n",
     "\n",
-    "    \"Learning Rate\": 1e-4, #tune.loguniform(1e-6, 1e-4),\n",
-    "    \"Batch Size\": 4,           #tune.qrandint(2, 8, 2),\n",
+    "    \"Learning Rate\": tune.loguniform(1e-6, 1e-3),\n",
+    "    \"Batch Size\": 4,\n",
     "\n",
-    "    \"Loss Function\": tune.grid_search(loss_list),\n",
+    "#     \"Loss Function\": tune.grid_search(loss_list),\n",
+    "    \"Loss Combiner\": BorderedLoss,\n",
+    "    \"Loss Combiner_ratio\": tune.uniform(0, 1),\n",
+    "    \"Loss Volume\": JaccardLoss,\n",
+    "    \"Loss Pixel\": FocalLoss,\n",
+    "    \"Loss Pixel_gamma\": tune.loguniform(0, 5),\n",
+    "    \"Loss Pixel_weights\": tune.uniform(0, 1),\n",
     "\n",
     "    \"Negative Mining\": False, #tune.choice([True, False]),\n",
     "    \"Smooth Labeling\": False, #tune.choice([True, False]),\n",
     "\n",
-    "    \"Input Pipeline\": tune.grid_search(pipeline_list),\n",
+    "#     \"Input Pipeline\": tune.grid_search(pipeline_list),\n",
+    "    \"Pipe Filter\": normalize,\n",
+    "    \"Pipe Layer\": LaplacianFilter,\n",
+    "    \"Pipe Layer_threshold\": tune.loguniform(0.5, 5),\n",
     "}"
    ]
   },
@@ -286,9 +299,7 @@
      "end_time": "2023-04-17T06:25:00.222485Z",
      "start_time": "2023-04-17T06:25:00.205759Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "init_cell": true
    },
    "outputs": [],
