Saving main_tune with seed

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -25,8 +25,8 @@
    "id": "af16e0d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:57:05.164067Z",
-     "start_time": "2023-05-02T06:57:02.441138Z"
+     "end_time": "2023-05-08T02:47:52.788666Z",
+     "start_time": "2023-05-08T02:47:50.008802Z"
     },
     "cell_style": "center",
     "init_cell": true,
@@ -82,8 +82,8 @@
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:57:05.170157Z",
-     "start_time": "2023-05-02T06:57:05.166828Z"
+     "end_time": "2023-05-08T02:47:52.794684Z",
+     "start_time": "2023-05-08T02:47:52.791438Z"
     },
     "init_cell": true
    },
@@ -113,8 +113,8 @@
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:57:05.289701Z",
-     "start_time": "2023-05-02T06:57:05.172000Z"
+     "end_time": "2023-05-08T02:47:52.855747Z",
+     "start_time": "2023-05-08T02:47:52.796684Z"
     },
     "init_cell": true
    },
@@ -241,8 +241,8 @@
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:57:05.296669Z",
-     "start_time": "2023-05-02T06:57:05.292516Z"
+     "end_time": "2023-05-08T02:47:52.865611Z",
+     "start_time": "2023-05-08T02:47:52.859879Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -250,7 +250,7 @@
    "outputs": [],
    "source": [
     "search_space = {\n",
-    "    \"Network\": DenSubUNet, #tune.grid_search([UNet, DeepCrack, SubUNet, DenSubUNet]),\n",
+    "    \"Network\": SubUNet, #tune.grid_search([UNet, DeepCrack, SubUNet, DenSubUNet]),\n",
     "    \"Optimizer\": Adam,\n",
     "\n",
     "    \"Learning Rate\": 1e-4, #tune.loguniform(1e-6, 1e-3),\n",
@@ -288,8 +288,8 @@
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:57:05.313071Z",
-     "start_time": "2023-05-02T06:57:05.298813Z"
+     "end_time": "2023-05-08T02:47:52.881590Z",
+     "start_time": "2023-05-08T02:47:52.867794Z"
     },
     "code_folding": [
      0
@@ -430,8 +430,8 @@
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:57:05.321198Z",
-     "start_time": "2023-05-02T06:57:05.315047Z"
+     "end_time": "2023-05-08T02:47:52.889641Z",
+     "start_time": "2023-05-08T02:47:52.883585Z"
     },
     "code_folding": [
      0
@@ -499,15 +499,15 @@
    "id": "e15a7a2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:58:02.835246Z",
-     "start_time": "2023-05-02T06:57:05.323185Z"
+     "end_time": "2023-05-08T02:48:48.594172Z",
+     "start_time": "2023-05-08T02:47:52.891492Z"
     }
    },
    "outputs": [],
    "source": [
     "data_reader = POCDataReader(root_dir=\"../data/POC\", load_on_gpu=False, verbose=True)\n",
-    "train_data, val_data, test_data = data_reader.split([0.7, 0.1, 0.2])\n",
-    "data_augment_(train_data, n=NUM_AUGMENT, load_on_gpu=False, verbose=True)"
+    "train_data, val_data, test_data = data_reader.split([0.7, 0.1, 0.2], seed=1234)\n",
+    "data_augment_(train_data, n=NUM_AUGMENT, load_on_gpu=False, verbose=True, seed=1234)"
    ]
   },
   {
@@ -524,22 +524,22 @@
    "id": "a69701ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-02T06:58:10.652110Z",
-     "start_time": "2023-05-02T06:58:02.837387Z"
+     "end_time": "2023-05-08T02:48:56.627980Z",
+     "start_time": "2023-05-08T02:48:48.597546Z"
     }
    },
    "outputs": [],
    "source": [
     "scheduler = ASHAScheduler(max_t=EPOCHS, grace_period=2, reduction_factor=2)\n",
     "# search_algo = HyperOptSearch()\n",
-    "search_algo = OptunaSearch()\n",
+    "# search_algo = OptunaSearch()\n",
     "\n",
     "tune_config = tune.TuneConfig(\n",
     "    metric=\"CrackIoU\",\n",
     "    mode=\"max\",\n",
     "    num_samples=NUM_SAMPLES,\n",
     "#     scheduler=scheduler,\n",
-    "    search_alg=search_algo,\n",
+    "#     search_alg=search_algo,\n",
     "    max_concurrent_trials=4,\n",
     ")\n",
     "\n",
@@ -572,8 +572,7 @@
    "id": "cdfb3720",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T02:13:27.697106Z",
-     "start_time": "2023-05-02T06:58:10.653970Z"
+     "start_time": "2023-05-08T02:47:50.811Z"
     },
     "scrolled": false
    },
@@ -596,8 +595,7 @@
    "id": "aaa2da49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-06T02:52:07.189538Z",
-     "start_time": "2023-05-06T02:13:27.701282Z"
+     "start_time": "2023-05-08T02:47:50.858Z"
     },
     "scrolled": true
    },
