Saving Main tune

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "25a1ac32",
    "metadata": {
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "035da606",
    "metadata": {},
@@ -21,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "af16e0d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:47:52.788666Z",
-     "start_time": "2023-05-08T02:47:50.008802Z"
+     "end_time": "2023-05-15T06:42:03.399585Z",
+     "start_time": "2023-05-15T06:42:00.552671Z"
     },
     "cell_style": "center",
     "init_cell": true,
@@ -45,15 +47,13 @@
     "from torch.optim import Adam\n",
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision.transforms import CenterCrop, Resize, GaussianBlur\n",
-    "# from torchvision.transforms.functional import invert\n",
+    "from torchvision.transforms import CenterCrop, Resize, RandomCrop, GaussianBlur\n",
     "\n",
     "import ray\n",
     "from ray import tune\n",
     "from ray.air import session, RunConfig, CheckpointConfig\n",
     "from ray.air.checkpoint import Checkpoint\n",
     "from ray.tune.schedulers import ASHAScheduler\n",
-    "# from ray.tune.search.hyperopt import HyperOptSearch\n",
     "from ray.tune.search.optuna import OptunaSearch\n",
     "from ray.tune.search import ConcurrencyLimiter\n",
     "\n",
@@ -69,6 +69,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3d9951dd",
    "metadata": {},
@@ -82,15 +83,15 @@
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:47:52.794684Z",
-     "start_time": "2023-05-08T02:47:52.791438Z"
+     "end_time": "2023-05-15T06:42:03.405701Z",
+     "start_time": "2023-05-15T06:42:03.402426Z"
     },
     "init_cell": true
    },
    "outputs": [],
    "source": [
-    "EPOCHS = 20\n",
-    "NUM_SAMPLES = 150\n",
+    "EPOCHS = 10\n",
+    "NUM_SAMPLES = 1\n",
     "\n",
     "NUM_AUGMENT = 1\n",
     "\n",
@@ -100,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d48f809",
    "metadata": {},
@@ -113,8 +115,8 @@
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:47:52.855747Z",
-     "start_time": "2023-05-08T02:47:52.796684Z"
+     "end_time": "2023-05-15T06:42:03.590395Z",
+     "start_time": "2023-05-15T06:42:03.407534Z"
     },
     "init_cell": true
    },
@@ -125,6 +127,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9687c3e3",
    "metadata": {},
@@ -133,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "215c221d",
    "metadata": {},
@@ -141,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5d931716",
    "metadata": {
@@ -165,32 +170,31 @@
    "outputs": [],
    "source": [
     "pixel_loss_list = [\n",
-    "    CrossEntropyLoss(weight=torch.tensor([.3, .7])),\n",
-    "    FocalLoss(weight=torch.tensor([.3, .7]), gamma=2),\n",
+    "    CrossEntropyLoss(weight=torch.tensor([.65, .35])),\n",
+    "    FocalLoss(weight=torch.tensor([.65, .35]), gamma=1.4),\n",
     "]\n",
     "\n",
     "volume_loss_list = [\n",
     "    JaccardLoss(),\n",
     "    TverskyLoss(alpha=0.3, beta=0.7),\n",
-    "    FocalTverskyLoss(alpha=0.3, beta=0.7, gamma=2),\n",
+    "    FocalTverskyLoss(alpha=0.3, beta=0.7, gamma=1.4),\n",
     "]\n",
     "\n",
-    "loss_list = []\n",
-    "for ploss in pixel_loss_list:\n",
-    "    loss_list.append(PixelLoss(pixel_loss=ploss, volume_loss=None))\n",
-    "for vloss in volume_loss_list:\n",
-    "    loss_list.append(VolumeLoss(pixel_loss=None, volume_loss=vloss))\n",
-    "for (ploss, vloss) in product(pixel_loss_list, volume_loss_list):\n",
-    "    loss_list.append(CombinedLoss(loss1=ploss, loss2=vloss, ratio=0.3))\n",
-    "    loss_list.append(BorderedLoss(border_loss=ploss, volume_loss=vloss, ratio=0.7))"
+    "# loss_list = []\n",
+    "# for ploss in pixel_loss_list:\n",
+    "#     loss_list.append(PixelLoss(pixel_loss=ploss, volume_loss=None))\n",
+    "# for vloss in volume_loss_list:\n",
+    "#     loss_list.append(VolumeLoss(pixel_loss=None, volume_loss=vloss))\n",
+    "# for (ploss, vloss) in product(pixel_loss_list, volume_loss_list):\n",
+    "#     loss_list.append(CombinedLoss(loss1=ploss, loss2=vloss, ratio=0.3))\n",
+    "#     loss_list.append(BorderedLoss(border_loss=ploss, volume_loss=vloss, ratio=0.7))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9939e19b",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Preload Pipeline"
    ]
@@ -202,7 +206,6 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "hidden": true,
     "run_control": {
      "frozen": true
     }
@@ -212,22 +215,24 @@
     "filter_list = [normalize] #, invert]\n",
     "\n",
     "layer_list = [\n",
+    "    None,\n",
     "    SobelFilter(),\n",
-    "    LaplacianFilter(),\n",
+    "    LaplacianFilter(threshold=0.75),\n",
     "    FrangiFilter(),\n",
     "    SatoFilter(),\n",
     "    SumFilters(FrangiFilter(), SatoFilter()),\n",
     "    SkeletonFilter(SequenceFilters(SumFilters(FrangiFilter(), SatoFilter()), CrackBinaryFilter())),\n",
     "]\n",
     "\n",
-    "pipeline_list = []\n",
-    "for f, l in product(filter_list, layer_list):\n",
-    "    pipeline_list.append(InputPipeline(transformer=f, layer_transformer=l))\n",
-    "    \n",
-    "no_layer_pip = InputPipeline(transformer=[normalize], layer_transformer=None)"
+    "# pipeline_list = []\n",
+    "# for f, l in product(filter_list, layer_list):\n",
+    "#     pipeline_list.append(InputPipeline(transformer=f, layer_transformer=l))\n",
+    "\n",
+    "# no_layer_pip = InputPipeline(transformer=[normalize], layer_transformer=None)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "83d95e76",
    "metadata": {},
@@ -241,8 +246,8 @@
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:47:52.865611Z",
-     "start_time": "2023-05-08T02:47:52.859879Z"
+     "end_time": "2023-05-15T06:42:03.598097Z",
+     "start_time": "2023-05-15T06:42:03.593653Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -250,31 +255,31 @@
    "outputs": [],
    "source": [
     "search_space = {\n",
-    "    \"Network\": SubUNet, #tune.grid_search([UNet, DeepCrack, SubUNet, DenSubUNet]),\n",
+    "    \"Network\": tune.grid_search([UNet, DeepCrack, SubUNet]), #tune.grid_search([UNet, DeepCrack, SubUNet, DenSubUNet]),\n",
     "    \"Optimizer\": Adam,\n",
     "\n",
     "    \"Learning Rate\": 1e-4, #tune.loguniform(1e-6, 1e-3),\n",
-    "    \"Batch Size\": 4,\n",
+    "    \"Batch Size\": 8,\n",
     "\n",
-    "#     \"Loss Function\": tune.grid_search(loss_list),\n",
-    "    \"Loss Combiner\": BorderedLoss,\n",
-    "    \"Loss Combiner_ratio\": tune.uniform(0.6, 0.9),\n",
-    "    \"Loss Volume\": JaccardLoss,\n",
-    "    \"Loss Pixel\": FocalLoss,\n",
-    "    \"Loss Pixel_gamma\": tune.uniform(1, 2),\n",
-    "    \"Loss Pixel_weight\": tune.uniform(0, 0.75),\n",
+    "    # \"Loss Function\": tune.grid_search(loss_list),\n",
+    "    \"Loss Combiner\": tune.grid_search([BorderedLoss, CombinedLoss]),\n",
+    "    \"Loss Combiner_ratio\": 0.75, #tune.uniform(0.6, 0.9),\n",
+    "    \"Loss Volume\": tune.grid_search(pixel_loss_list),\n",
+    "    \"Loss Pixel\": tune.grid_search(volume_loss_list),\n",
+    "    # \"Loss Pixel_gamma\": 1.4, #tune.uniform(1, 2),\n",
+    "    # \"Loss Pixel_weight\": 0.65, #tune.uniform(0, 0.75),\n",
     "\n",
     "    \"Negative Mining\": False, #tune.choice([True, False]),\n",
     "    \"Smooth Labeling\": False, #tune.choice([True, False]),\n",
     "\n",
-    "#     \"Input Pipeline\": tune.grid_search(pipeline_list),\n",
     "    \"Pipe Filter\": normalize,\n",
-    "    \"Pipe Layer\": LaplacianFilter,\n",
-    "    \"Pipe Layer_threshold\": 0.75, #tune.loguniform(0.5, 5),\n",
+    "    \"Pipe Layer\": tune.grid_search(layer_list),\n",
+    "    # \"Pipe Layer_threshold\": 0.75, #tune.loguniform(0.5, 5),\n",
     "}"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ecc521e6",
    "metadata": {},
@@ -288,12 +293,10 @@
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:47:52.881590Z",
-     "start_time": "2023-05-08T02:47:52.867794Z"
+     "end_time": "2023-05-15T06:42:03.614954Z",
+     "start_time": "2023-05-15T06:42:03.600176Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "init_cell": true
    },
    "outputs": [],
@@ -304,21 +307,17 @@
     "    \n",
     "    inpip = InputPipeline(\n",
     "        transformer=config[\"Pipe Filter\"],\n",
-    "        layer_transformer=config[\"Pipe Layer\"](threshold=config[\"Pipe Layer_threshold\"]))\n",
+    "        layer_transformer=config[\"Pipe Layer\"])\n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        inpip = inpip.to(device)\n",
     "\n",
     "    train_dataset = POCDataset(\n",
     "        train_data,\n",
-    "        transform=Sequential(inpip, CenterCrop(size=(480, 480)), Resize(size=(384, 384))),\n",
+    "        transform=Sequential(RandomCrop(size=(256,256)), inpip),\n",
     "        target_transform= Sequential(\n",
+    "            RandomCrop(size=(256,256)),\n",
     "            GaussianBlur(kernel_size=3, sigma=0.7),\n",
-    "            CenterCrop(size=(480, 480)),\n",
-    "            Resize(size=(384, 384)),\n",
-    "        ) if config[\"Smooth Labeling\"] else Sequential(\n",
-    "            CenterCrop(size=(480, 480)),\n",
-    "            Resize(size=(384, 384)),\n",
-    "        ),\n",
+    "        ) if config[\"Smooth Labeling\"] else RandomCrop(size=(256,256)),\n",
     "        negative_mining=config[\"Negative Mining\"],\n",
     "        load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "    train_dataset.precompute_transform()\n",
@@ -342,8 +341,8 @@
     "\n",
     "    val_dataset = POCDataset(\n",
     "        val_data, \n",
-    "        transform=Sequential(inpip, CenterCrop(size=(480, 480)), Resize(size=(384, 384))),\n",
-    "        target_transform=Sequential(CenterCrop(size=(480, 480)), Resize(size=(384, 384))),\n",
+    "        transform=Sequential(RandomCrop(size=(256,256)), inpip),\n",
+    "        target_transform=RandomCrop(size=(256,256)),\n",
     "        negative_mining=False,\n",
     "        load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "    val_dataset.precompute_transform()\n",
@@ -417,6 +416,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad8a58ec",
    "metadata": {},
@@ -430,12 +430,10 @@
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:47:52.889641Z",
-     "start_time": "2023-05-08T02:47:52.883585Z"
+     "end_time": "2023-05-15T06:42:03.622812Z",
+     "start_time": "2023-05-15T06:42:03.616733Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "init_cell": true
    },
    "outputs": [],
@@ -452,8 +450,8 @@
     "\n",
     "    test_dataset = POCDataset(\n",
     "        test_data,\n",
-    "        transform=Sequential(inpip, CenterCrop(size=(480, 480)), Resize(size=(384, 384))),\n",
-    "        target_transform=Sequential(CenterCrop(size=(480, 480)), Resize(size=(384, 384))),\n",
+    "        transform=Sequential(RandomCrop(size=(256,256)), inpip),\n",
+    "        target_transform=RandomCrop(size=(256,256)),\n",
     "        negative_mining=False,\n",
     "        load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "    \n",
@@ -478,6 +476,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "918e1c03",
    "metadata": {},
@@ -486,6 +485,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9f955b19",
    "metadata": {},
@@ -499,8 +499,8 @@
    "id": "e15a7a2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:48:48.594172Z",
-     "start_time": "2023-05-08T02:47:52.891492Z"
+     "end_time": "2023-05-15T06:42:59.555200Z",
+     "start_time": "2023-05-15T06:42:03.624557Z"
     }
    },
    "outputs": [],
@@ -511,6 +511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "025b0faa",
    "metadata": {},
@@ -524,13 +525,13 @@
    "id": "a69701ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-08T02:48:56.627980Z",
-     "start_time": "2023-05-08T02:48:48.597546Z"
+     "end_time": "2023-05-15T06:43:07.962177Z",
+     "start_time": "2023-05-15T06:42:59.558654Z"
     }
    },
    "outputs": [],
    "source": [
-    "scheduler = ASHAScheduler(max_t=EPOCHS, grace_period=2, reduction_factor=2)\n",
+    "#scheduler = ASHAScheduler(max_t=EPOCHS, grace_period=2, reduction_factor=2)\n",
     "# search_algo = HyperOptSearch()\n",
     "# search_algo = OptunaSearch()\n",
     "\n",
@@ -559,6 +560,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4b0913de",
    "metadata": {},
@@ -572,9 +574,9 @@
    "id": "cdfb3720",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-08T02:47:50.811Z"
-    },
-    "scrolled": false
+     "end_time": "2023-05-17T04:16:39.713267Z",
+     "start_time": "2023-05-15T06:43:07.964985Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -582,6 +584,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f08aabe4",
    "metadata": {},
@@ -595,7 +598,8 @@
    "id": "aaa2da49",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-08T02:47:50.858Z"
+     "end_time": "2023-05-17T04:17:37.361539Z",
+     "start_time": "2023-05-17T04:16:39.717794Z"
     },
     "scrolled": true
    },
@@ -614,14 +618,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a8633d3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d599c84a",
    "metadata": {},
    "outputs": [],
    "source": []
