--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
@@ -90,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "EPOCHS = 10\n",
+    "EPOCHS = 40\n",
     "NUM_SAMPLES = 1\n",
     "\n",
     "NUM_AUGMENT = 1\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
@@ -120,7 +120,15 @@
     },
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n"
+     ]
+    }
+   ],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using {device} device\")"
@@ -157,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "28766a0c",
    "metadata": {
     "deletable": false,
@@ -186,7 +194,7 @@
     "# for vloss in volume_loss_list:\n",
     "#     loss_list.append(VolumeLoss(pixel_loss=None, volume_loss=vloss))\n",
     "# for (ploss, vloss) in product(pixel_loss_list, volume_loss_list):\n",
-    "#     loss_list.append(CombinedLoss(loss1=ploss, loss2=vloss, ratio=0.3))\n",
+    "#     loss_list.append(MeanLoss(loss1=ploss, loss2=vloss, ratio=0.3))\n",
     "#     loss_list.append(BorderedLoss(border_loss=ploss, volume_loss=vloss, ratio=0.7))"
    ]
   },
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2e663e37",
    "metadata": {
     "deletable": false,
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
@@ -259,10 +267,10 @@
     "    \"Optimizer\": Adam,\n",
     "\n",
     "    \"Learning Rate\": 1e-4, #tune.loguniform(1e-6, 1e-3),\n",
-    "    \"Batch Size\": 8,\n",
+    "    \"Batch Size\": 16,\n",
     "\n",
     "    # \"Loss Function\": tune.grid_search(loss_list),\n",
-    "    \"Loss Combiner\": tune.grid_search([BorderedLoss, CombinedLoss]),\n",
+    "    \"Loss Combiner\": MeanLoss, #tune.grid_search([BorderedLoss, MeanLoss]),\n",
     "    \"Loss Combiner_ratio\": 0.75, #tune.uniform(0.6, 0.9),\n",
     "    \"Loss Volume\": tune.grid_search(pixel_loss_list),\n",
     "    \"Loss Pixel\": tune.grid_search(volume_loss_list),\n",
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
@@ -366,14 +374,10 @@
     "        model = nn.DataParallel(model)\n",
     "    model.to(device)\n",
     "\n",
-    "    pixel_loss_fn = config[\"Loss Pixel\"](\n",
-    "        weight=torch.tensor([config[\"Loss Pixel_weight\"], 1.0 - config[\"Loss Pixel_weight\"]]),\n",
-    "        gamma=config[\"Loss Pixel_gamma\"])\n",
-    "    volume_loss_fn = config[\"Loss Volume\"]()\n",
-    "    loss_fn = config[\"Loss Combiner\"](\n",
-    "        border_loss=pixel_loss_fn,\n",
-    "        volume_loss=volume_loss_fn,\n",
-    "        ratio=config[\"Loss Combiner_ratio\"]).to(device)\n",
+    "    loss_fn = MultiscaleLoss(config[\"Loss Combiner\"](\n",
+    "        config[\"Loss Pixel\"],\n",
+    "        config[\"Loss Volume\"],\n",
+    "        ratio=config[\"Loss Combiner_ratio\"])).to(device)\n",
     "\n",
     "    optimizer = config[\"Optimizer\"](model.parameters(), lr=config[\"Learning Rate\"], betas=(0.9, 0.99))\n",
     "    lr_scheduler = CosineAnnealingLR(optimizer, T_max=EPOCHS)\n",
@@ -426,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
@@ -495,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e15a7a2f",
    "metadata": {
     "ExecuteTime": {
@@ -503,9 +507,54 @@
      "start_time": "2023-05-15T06:42:03.624557Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6064de43669f43c4a665c8734b677f44",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading dataset into RAM:   0%|          | 0/4606 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t- Loading done, RAM used: 9.73GiB / free: 44.60GiB / total: 125.53GiB\n",
+      "\t- Got a total of 4606 images.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b115a011389a4398b3b0766939c7f2ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Expending the dataset 1 more times:   0%|          | 0/3224 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t- Augmentation done, RAM used: 10.75GiB / free: 43.58GiB / total: 125.53GiB\n",
+      "\t- Got 3224 new images and a total of 6448 images.\n"
+     ]
+    }
+   ],
    "source": [
-    "data_reader = POCDataReader(root_dir=\"../data/POC\", load_on_gpu=False, verbose=True)\n",
+    "data_reader = POCDataReader(root_dir=\"../data/POC2-mixed\", load_on_gpu=False, verbose=True)\n",
     "train_data, val_data, test_data = data_reader.split([0.7, 0.1, 0.2], seed=1234)\n",
     "data_augment_(train_data, n=NUM_AUGMENT, load_on_gpu=False, verbose=True, seed=1234)"
    ]
@@ -521,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a69701ba",
    "metadata": {
     "ExecuteTime": {
@@ -541,7 +590,7 @@
     "    num_samples=NUM_SAMPLES,\n",
     "#     scheduler=scheduler,\n",
     "#     search_alg=search_algo,\n",
-    "    max_concurrent_trials=4,\n",
+    "    max_concurrent_trials=2,\n",
     ")\n",
     "\n",
     "tuner = tune.Tuner(\n",
@@ -551,7 +600,7 @@
     "    tune_config=tune_config,\n",
     "    param_space=search_space,\n",
     "    run_config=RunConfig(\n",
-    "        local_dir=\"~/POC-Project/ray_results\",\n",
+    "        local_dir=\"/media/piai/ray_results\",\n",
     "        checkpoint_config=CheckpointConfig(\n",
     "            num_to_keep=1,\n",
     "            checkpoint_score_attribute=\"CrackIoU\",\n",
@@ -570,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cdfb3720",
    "metadata": {
     "ExecuteTime": {
@@ -578,7 +627,15 @@
      "start_time": "2023-05-15T06:43:07.964985Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-24 17:17:45,714\tINFO worker.py:1544 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
+     ]
+    }
+   ],
    "source": [
     "results = tuner.fit()"
    ]
@@ -628,7 +685,7 @@
   "kernelspec": {
    "display_name": "POC-env",
    "language": "python",
-   "name": "poc-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
