--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "af16e0d4",
    "metadata": {
     "ExecuteTime": {
@@ -321,8 +321,11 @@
     "\n",
     "    train_dataset = POCDataset(\n",
     "        train_data,\n",
-    "        transform=inpip,\n",
-    "        target_transform= GaussianBlur(kernel_size=3, sigma=0.7) if config[\"Smooth Labeling\"] else None,\n",
+    "        transform=Sequential(RandomCrop(size=(256,256)), inpip),\n",
+    "        target_transform= Sequential(\n",
+    "            RandomCrop(size=(256,256)),\n",
+    "            GaussianBlur(kernel_size=3, sigma=0.7),\n",
+    "        ) if config[\"Smooth Labeling\"] else RandomCrop(size=(256,256)),\n",
     "        negative_mining=config[\"Negative Mining\"],\n",
     "        load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "    train_dataset.precompute_transform()\n",
@@ -346,8 +349,8 @@
     "\n",
     "    val_dataset = POCDataset(\n",
     "        val_data, \n",
-    "        transform=inpip,\n",
-    "        target_transform=None,\n",
+    "        transform=Sequential(RandomCrop(size=(256,256)), inpip),\n",
+    "        target_transform=RandomCrop(size=(256,256)),\n",
     "        negative_mining=False,\n",
     "        load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "    val_dataset.precompute_transform()\n",
@@ -368,7 +371,7 @@
     "\n",
     "    model = config[\"Network\"](n_channels=inpip.nb_channel, n_classes=2)\n",
     "    if torch.cuda.is_available() and torch.cuda.device_count() > 1:\n",
-    "        model = torch.nn.DataParallel(model)\n",
+    "        model = nn.DataParallel(model)\n",
     "    model.to(device)\n",
     "\n",
     "    loss_fn = MultiscaleLoss(config[\"Loss Combiner\"](\n",
@@ -377,7 +380,7 @@
     "        ratio=config[\"Loss Combiner_ratio\"])).to(device)\n",
     "\n",
     "    optimizer = config[\"Optimizer\"](model.parameters(), lr=config[\"Learning Rate\"], betas=(0.9, 0.99))\n",
-    "    lr_scheduler = CosineAnnealingLR(optimizer, T_max=EPOCHS//3)\n",
+    "    lr_scheduler = CosineAnnealingLR(optimizer, T_max=EPOCHS)\n",
     "\n",
     "    loaded_checkpoint = session.get_checkpoint()\n",
     "    if loaded_checkpoint:\n",
@@ -441,21 +444,18 @@
    "source": [
     "def evaluate(test_data, result):\n",
     "\n",
-    "    if result.checkpoint is None:\n",
-    "        return None\n",
-    "\n",
     "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "    inpip = InputPipeline(\n",
     "        transformer=result.config[\"Pipe Filter\"],\n",
-    "        layer_transformer=result.config[\"Pipe Layer\"])\n",
+    "        layer_transformer=result.config[\"Pipe Layer\"](threshold=result.config[\"Pipe Layer_threshold\"]))\n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        inpip = inpip.to(device)\n",
     "\n",
     "    test_dataset = POCDataset(\n",
     "        test_data,\n",
-    "        transform=inpip,\n",
-    "        target_transform=None,\n",
+    "        transform=Sequential(RandomCrop(size=(256,256)), inpip),\n",
+    "        target_transform=RandomCrop(size=(256,256)),\n",
     "        negative_mining=False,\n",
     "        load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "    \n",
