Cleaning main_tune & Fixing evaluation w/ best epoch

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
@@ -120,15 +120,7 @@
     },
     "init_cell": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using {device} device\")"
@@ -165,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "28766a0c",
    "metadata": {
     "deletable": false,
@@ -209,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2e663e37",
    "metadata": {
     "deletable": false,
@@ -250,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
@@ -263,7 +255,7 @@
    "outputs": [],
    "source": [
     "search_space = {\n",
-    "    \"Network\": tune.grid_search([UNet, DeepCrack, SubUNet]), #tune.grid_search([UNet, DeepCrack, SubUNet, DenSubUNet]),\n",
+    "    \"Network\": tune.grid_search([DeepCrack, UNet, SubUNet]), #tune.grid_search([UNet, DeepCrack, SubUNet, DenSubUNet]),\n",
     "    \"Optimizer\": Adam,\n",
     "\n",
     "    \"Learning Rate\": 1e-4, #tune.loguniform(1e-6, 1e-3),\n",
@@ -297,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
@@ -427,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
@@ -441,7 +433,7 @@
    "source": [
     "def evaluate(test_data, result):\n",
     "\n",
-    "    if result.checkpoint is None:\n",
+    "    if result.best_checkpoints:\n",
     "        return None\n",
     "\n",
     "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -466,14 +458,14 @@
     "\n",
     "    best_trained_model = result.config[\"Network\"](n_channels=inpip.nb_channel, n_classes=2).to(device)\n",
     "\n",
-    "    checkpoint_path = os.path.join(result.checkpoint.to_directory(), \"checkpoint.pt\")\n",
+    "    checkpoint_path = os.path.join(result.best_checkpoints[0][0].to_directory(), \"checkpoint.pt\")\n",
     "    model_state, _, _ = torch.load(checkpoint_path)\n",
     "    best_trained_model.load_state_dict(model_state)\n",
     "\n",
     "    test_metrics = EvaluationMetrics(\n",
     "        buffer_size=len(evaluation_dataloader),\n",
     "        hyperparam=result.config,\n",
-    "        epochs=result.metrics[\"Epoch\"],\n",
+    "        epochs=result.best_checkpoints[0][1][\"Epoch\"], # True epoch of the best run\n",
     "        device=device)\n",
     "\n",
     "    evaluation_loop(dataloader=evaluation_dataloader, model=best_trained_model, metric=test_metrics, device=device)\n"
@@ -499,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e15a7a2f",
    "metadata": {
     "ExecuteTime": {
@@ -507,52 +499,7 @@
      "start_time": "2023-05-15T06:42:03.624557Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6064de43669f43c4a665c8734b677f44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading dataset into RAM:   0%|          | 0/4606 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t- Loading done, RAM used: 9.73GiB / free: 44.60GiB / total: 125.53GiB\n",
-      "\t- Got a total of 4606 images.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b115a011389a4398b3b0766939c7f2ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Expending the dataset 1 more times:   0%|          | 0/3224 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t- Augmentation done, RAM used: 10.75GiB / free: 43.58GiB / total: 125.53GiB\n",
-      "\t- Got 3224 new images and a total of 6448 images.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_reader = POCDataReader(root_dir=\"../data/POC2-mixed\", load_on_gpu=False, verbose=True)\n",
     "train_data, val_data, test_data = data_reader.split([0.7, 0.1, 0.2], seed=1234)\n",
@@ -570,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a69701ba",
    "metadata": {
     "ExecuteTime": {
@@ -619,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cdfb3720",
    "metadata": {
     "ExecuteTime": {
@@ -627,15 +574,7 @@
      "start_time": "2023-05-15T06:43:07.964985Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-24 17:17:45,714\tINFO worker.py:1544 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = tuner.fit()"
    ]
@@ -670,14 +609,6 @@
     "for result in results:\n",
     "    evaluate(test_data=test_data, result=result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8633d3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
