--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -263,9 +263,9 @@
     "\n",
     "    # \"Loss Function\": tune.grid_search(loss_list),\n",
     "    \"Loss Combiner\": MeanLoss, #tune.grid_search([BorderedLoss, MeanLoss]),\n",
-    "    \"Loss Combiner_ratio\": 0.75, #tune.uniform(0.6, 0.9),\n",
-    "    \"Loss Volume\": tune.grid_search(pixel_loss_list),\n",
-    "    \"Loss Pixel\": tune.grid_search(volume_loss_list),\n",
+    "    \"Loss Combiner_ratio\": 0.25, #tune.uniform(0.6, 0.9),\n",
+    "    \"Loss Volume\": tune.grid_search(volume_loss_list),\n",
+    "    \"Loss Pixel\": tune.grid_search(pixel_loss_list),\n",
     "    # \"Loss Pixel_gamma\": 1.4, #tune.uniform(1, 2),\n",
     "    # \"Loss Pixel_weight\": 0.65, #tune.uniform(0, 0.75),\n",
     "\n",
