--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -226,9 +226,9 @@
     "\n",
     "# pipeline_list = []\n",
     "# for f, l in product(filter_list, layer_list):\n",
-    "#     pipeline_list.append(InputPipeline(transformer=f, layer_transformer=l))\n",
+    "#     pipeline_list.append(InputPipeline(filter=f, additional_channel=l))\n",
     "\n",
-    "# no_layer_pip = InputPipeline(transformer=[normalize], layer_transformer=None)"
+    "# no_layer_pip = InputPipeline(filter=[normalize], additional_channel=None)"
    ]
   },
   {
@@ -306,8 +306,8 @@
     "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "    \n",
     "    inpip = InputPipeline(\n",
-    "        transformer=config[\"Pipe Filter\"],\n",
-    "        layer_transformer=config[\"Pipe Layer\"])\n",
+    "        filter=config[\"Pipe Filter\"],\n",
+    "        additional_channel=config[\"Pipe Layer\"])\n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        inpip = inpip.to(device)\n",
     "\n",
@@ -439,8 +439,8 @@
     "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "    inpip = InputPipeline(\n",
-    "        transformer=result.config[\"Pipe Filter\"],\n",
-    "        layer_transformer=result.config[\"Pipe Layer\"])\n",
+    "        filter=result.config[\"Pipe Filter\"],\n",
+    "        additional_channel=result.config[\"Pipe Layer\"])\n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        inpip = inpip.to(device)\n",
     "\n",
